--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Leaflet</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>React Leaflet</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+		<footer>
+			<!-- Messenger Chat Plugin Code -->
+			<div id="fb-root"></div>
+
+			<!-- Your Chat Plugin code -->
+			<div id="fb-customer-chat" class="fb-customerchat"></div>
+
+			<script>
+				var chatbox = document.getElementById("fb-customer-chat");
+				chatbox.setAttribute("page_id", "141526912371327");
+				chatbox.setAttribute("attribution", "biz_inbox");
+			</script>
+
+			<!-- Your SDK code -->
+			<script>
+				window.fbAsyncInit = function () {
+					FB.init({
+						xfbml: true,
+						version: "v18.0",
+					});
+				};
+
+				(function (d, s, id) {
+					var js,
+						fjs = d.getElementsByTagName(s)[0];
+					if (d.getElementById(id)) return;
+					js = d.createElement(s);
+					js.id = id;
+					js.src =
+						"https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js";
+					fjs.parentNode.insertBefore(js, fjs);
+				})(document, "script", "facebook-jssdk");
+			</script>
+		</footer>
+	</body>
 </html>
